--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
   <!-- START Hero Container -->
 
   <div class="hero-container">
+
     <div id="tophat">
       <div class="row">
         <div class="col one">
@@ -142,11 +143,17 @@
     <!-- <p class="caption">Video courtesy PBS NewsHour, produced in partnership with Injustice Watch and Capital News Service. It was produced by John Yang of PBS NewsHour and Camila Velloso, Hannah Gaskill, Emily Top, Athiyah Azeem, Dominique Janifer, Lynsey Jeffery, Jamie Kerner, Lauren Pery, Sara Salimi and DeLon Thornton of Capital News Service.</p><br>-->
 
 
-    <h1>Unequal Justice: Maryland's Parole System</h1>
-    <p class="author"> BY HANNAH GASKILL </p>
-    <p class="date"> December 15, 2019</p><br>
-    <p class="caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p><br>
+    <h1>The Glendening Legacy</h1>
+    <!-- <p class="author"> BY AUTHOR NAME </p>
+    <p class="date"> December 15, 2019</p><br> -->
+    <p class="caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p><br>
     <a href="#"><p class="more">READ MORE: Maryland juvenile lifers denied meaningful opportunity for release despite parole-eligible sentences <p></a><br><br>
+
+      <h1>The Hogan Era</h1>
+      <!-- <p class="author"> BY AUTHOR NAME </p>
+      <p class="date"> December 15, 2019</p><br> -->
+      <p class="caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p><br>
+      <a href="#"><p class="more">READ MORE: Maryland juvenile lifers denied meaningful opportunity for release despite parole-eligible sentences <p></a><br><br>
 
 <hr style="border: 1px solid white; width:20%;">
     <h1>Meet the juvenile lifers</h1>
@@ -180,7 +187,7 @@
     <img src="images/kareem-hasan.jpg" style="width:100%;">
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title">Kareem Hasan</h5>
+        <h5 class="card-title">Calvin McNeill</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
         <button class="button-group"><a>Read more</a></button>
       </div>
