--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
     <meta name="parsely-author" content="CNS Maryland" />
     <meta name="parsely-tags" content="" />
 
+
+
 </head>
 
 <body>
@@ -98,6 +100,7 @@
       </div>
 
     <!-- <div class="partners"> HOWARD CENTER | CNS | PBS</div> -->
+    <!-- The video -->
 
     <div class="centered">
       <p class="line-1 anim-typewriter">Growing Up Behind Bars</p>
