--- a/story-template1.html
+++ b/story-template1.html
@@ -154,7 +154,7 @@
           </div>
 
           <div data-step='2' class="scroll-graphic-tab d-none">
-            <img class="img-fluid img-fluid-trees" src="images/data-race-min.png" alt="" />
+            <img class="img-fluid img-fluid-trees" src="images/data-race-min1.png" alt="" />
           </div>
           <div data-step='3' class="scroll-graphic-tab d-none">
             <img class="img-fluid img-fluid-trees" src="images/data-race-white.png" alt="" />
