--- a/story-template1.html
+++ b/story-template1.html
@@ -68,6 +68,8 @@
     <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli:400,800&display=swap" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
+
     <!-- Jquery call -->
     <script
             src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -114,8 +116,8 @@
       <div class="cover-img relative-img" style="background-image: url('images/main-img.jpg')"></div>
       <div class="centered">
         <div class="article-title">Fixing The System</span></div><br>
-        <div class="article-desc">At the time of the Supreme Court decision in Montgomery v. Louisiana, Pennsylvania had 521 juvenile life without parole inmates. Now, it's down to 15.</div><br>
-        <div class="article-author">By CAMILA VELLOSO &nbsp | &nbsp OCTOBER 18, 2019</div>
+        <div class="article-desc">Pennsylvania once had the largest population of juvenile lifers in the country. Now, it serves as a model of successful resentencing and release of those inmates. </div><br>
+        <!--<div class="article-author">By CAMILA VELLOSO &nbsp | &nbsp OCTOBER 18, 2019</div>-->
       </div>
 
     </div><!-- END Hero Container -->
@@ -127,14 +129,133 @@
 <div class="story-container">
   <a name="story"><div class="container"></a><br><br>
 
+    <p style="text-align: center;"><i class="fab fa-facebook-f"></i> &nbsp <i class="fab fa-twitter-square"></i>
+
+</p>
+
+<p class="author">By <span>CAMILA VELLOSO</span> <br>
+
+<p class="date">NOVEMBER 4, 2019<p><br><br>
 
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
+<p>Joseph Baynes spent 41 years behind bars, locked up at the age of 17 for his role in a fatal robbery. Convicted of second degree murder in 1975, Baynes received mandatory life without
+parole under Pennsylvania’s stringent sentencing laws.</p><br><br>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
+<p>Baynes' juvenile status and lack of parental supervision at the time of police interrogation
+led to a new trial in 1977. This time, his written statement to the police, which Baynes
+alleges was the result of physical coercion, 4 was excluded from trial.</p><br><br>
+
+<p>But Baynes was again convicted and committed to an adult penitentiary, condemned to die
+in prison.</p><br><br>
+
+<p>“I was really petrified,” he said. </p><br><br>
+
+<p>Baynes was just one of Pennsylvania’s 521 juveniles sentenced to mandatory life without
+parole for crimes committed before the age of 18.</p><br><br>
+
+<p>The juvenile lifer population in Pennsylvania began to increase in the 1970s, reaching a peak in the 1990s amid fears of a new generation of criminals, the “superpredator” - a prediction that never came into fruition.</p><br><br>
+
+<!-- first graphic container-->
+<div class="incarceration-graph"><br>
+    <div class="graphic-container">
+      <div class="chart-title"><b>Incarceration rates for juvenile lifers in Pennsylvania</b></div>
+      <div class="chart-description">The number of juveniles sentenced to life without parole spiked in the '90s, a consequence of the tough-on-crime rhetoric and fears of "superpredators."</div><br>
+    </div>
+    <div id="incarceration"></div>
+    <div class="chart-source">Source: Pennsylvania Department of Corrections</div><br>
+  </div><br><br>  <!-- END first graphic container-->
+
+<p>Many of these “juvenile lifers” struggled to adapt to their new circumstances.</p><br><br>
+
+<p>For juvenile lifers like Baynes and Grant, a life sentence limited their access to educational,
+vocational and other programs in prison.</p><br><br>
+
+<p>“Why should we give you a skill if you're never going home?” 14 Baynes recalled being told
+when seeking enrollment in such programs in prison.</p><br><br>
+
+<p>When given the opportunity, Baynes managed to get his GED and took culinary classes. He
+found purpose studying in law library, practicing his Muslim religion, training as a cook and
+mentoring younger inmates. </p><br><br>
+
+<p>During his incarceration, Baynes continued to see juvenile lifers sent to adult prisons.
+Mandatory life without parole remained the only sentencing option for Pennsylvania’s
+juvenile offenders convicted of first and second degree murder, until 2012, when the U.S.
+Supreme Court ruled these sentences unconstitutional in Miller vs. Alabama. </p><br><br>
+
+<p>Juvenile justice advocates were quick to push for federal courts to retroactively apply the
+Miller ruling in Pennsylvania and for legislators to change the state’s sentencing laws.</p><br><br>
+
+<!-- second graphic container-->
+<div class="incarceration-graph"><br>
+    <div class="graphic-container">
+      <div class="chart-title"><b>Age of juvenile lifers at release</b></div>
+      <div class="chart-description">Older inmates made up the first wave of resentencings of juvenile lifers cases in Pennsylvania, as they had spent the longest time incarcerated.</div><br>
+    </div>
+    <div id="age-released"></div>
+    <div class="chart-source">Source: Pennsylvania Department of Corrections</div><br><br>
+  </div><br><br>  <!-- END second graphic container-->
 
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
+<p>In 2012, the Pennsylvania General Assembly passed 19 Senate Bill 850 for juvenile lifers
+convicted after June of that year that changed sentencing practices for first and second
+degree murder convictions.</p><br><br>
+
+<p>For juveniles under the age of 15, the bill set the minimum sentence for first
+degree murder at 25 years to life and 20 years to life for second degree murder. For those
+at least 15 but younger than 18 years of age, the minimum sentence was 35 years to life for
+first degree murder and 30 years to life for second degree murder. </p><br><br>
+
+<p>But that legislation was not made retroactive.</p><br><br>
+
+<p>That same year, the Juvenile Law Center and the Defender Association of Philadelphia, in
+Commonwealth v. Cunningham, argued the unconstitutionality of juvenile life without
+parole sentences in Pennsylvania, holding that Miller should apply retroactively to the
+state’s juvenile lifers.</p><br><br>
+
+<p>In October 2013, the Pennsylvania Supreme Court dealt another blow to juvenile justice
+advocates when it decided that the Supreme Court’s ruling in Miller did not apply
+retroactively. </p><br><br>
+
+<p>Pennsylvania’s juvenile lifers were not entitled to new sentences and continued to serve
+life without parole terms. </p><br><br>
+
+<p>“It was a challenging time because we had individuals in Pennsylvania - hundreds of them -
+who were sitting on their hands. They couldn't move their cases forward,” said Marsha
+Levick, co-founder and Chief Legal Officer of the Juvenile Law Center. </p><br><br>
+
+<p>“It was enormously frustrating trying to figure out what were our solutions here,” Levick
+said. “We were all trying to do whatever we could think of to find some play around the
+Pennsylvania Supreme Court's decision.” </p><br><br>
+
+<p>With no remedy under Miller, juvenile lifers were left waiting until 2016 when the U.S.
+Supreme Court took up Montgomery v. Louisiana.</p><br><br>
+
+<p>On January 25, 2016, Baynes - a self-proclaimed “news buff” - was sitting in his bunk at
+Waymart State Correctional Institution watching C-SPAN when he learned the U.S.
+Supreme Court held that the Miller ruling applied retroactively.</p><br><br>
+
+<p>On December 22, 2016, 32 at age 59, Baynes was resentenced to 30 years to life and became
+eligible for parole, having been awarded credit for time served.</p><br><br>
+
+<p>To the prison staff members, who provided character reference letters, Baynes was an
+“exemplary” inmate prepared to make a “positive contribution to society,” according to
+court documents. </p><br><br>
+
+<p>Four months later, Baynes was released.</p><br><br>
+
+<p>Additional changes to Pennsylvania’s procedural requirements in juvenile cases came as a
+result of the Montgomery decision.</p><br><br>
+
+<p>In 2017, Pennsylvania’s Supreme Court declared in Commonwealth v. Batts, that the state
+bore the burden of proving a juvenile offender is “permanently incorrigible and that
+rehabilitation would be impossible.” </p><br><br>
+
+<p>“When you place the burden on the prosecutor, it is going to be harder to impose life
+without parole,” said Levick said, who argued before the court on behalf of defendant
+Qu’eed Batts. “Rare and uncommon has to mean something.” </p><br><br>
+
+<p>Philadelphia County alone undertook the task of resentencing 304 cases, over half of the
+state’s entire juvenile lifer population.</p><br><br>
 
 <br><br><br><br>
 
@@ -244,9 +365,30 @@
 <div class="story-container">
   <div class="container"><br><br>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
+    <p>The Defender Association of Philadelphia created a juvenile life without parole unit to
+    provide representation for the juvenile lifers eligible for new sentences under the
+    Montgomery decision.</p><br><br>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
+    <p>“We met with the judiciary and prosecutor’s office to try to come up with a way to resolve
+    that many cases in a reasonable and timely fashion,” 38 said Bradley Bridge, a veteran
+    Philadelphia public defender and one of three co-chairs of the juvenile life without parole
+    unit.</p><br><br>
+
+    <p>In making sentencing recommendations, the District Attorney’s office devised an internal
+    committee with senior leadership and special ADA’s in the homicide unit to go through
+    evidence, case files, mitigation material from the defense, as well as victim statements, said
+    DA spokesperson Cameron Kline. </p><br><br>
+
+    <p>“Everyone devoted significant resources toward resolving those cases...and it was only
+    through the cooperation of all the parties that we’ve managed to very successfully [do
+    so],” Bridge added.</p><br><br>
+
+    <p>In a matter of three years, 209 juvenile lifers have been released in Pennsylvania, according
+    to data provided by the Pennsylvania Department of Corrections and analyzed by Capital
+    News Service. </p><br><br>
+
+    <p>Only 15 juvenile lifers have been resentenced to life without parole and 216 were
+    resentenced to numbered terms. </p><br><br>
 
 
 
@@ -282,14 +424,88 @@
 <div class="story-container">
   <div class="container"><br><br>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
+    <p>But juvenile lifers face another major transition upon release- adjusting to life outside prison.</p><br><br>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br><br>
+    <p>Everything about reentry - housing, employment and social relationships - “all the way down to paying a bill” 43 - was new to someone like Baynes and Grant.</p><br><br>
 
+    <p>“I did a lot of odd jobs,” Grant said. “But it kept me in a right state of mind.”
+    Grant finally settled at the Defender Association of Philadelphia. He started as an
+    administrative assistant and worked for the prison services unit, a position that led him
+    back into prisons.</p><br><br>
+
+    <p>“In my mind it felt like an achievement to just be able to go back inside of a prison as an official visitor,“ Grant said. “The experience was overwhelming to be able to walk into the prison and walk out...to go in as an official and to actually interview prisoners.” </p><br><br>
+
+    <p>Grant moved to an investigator position, where he’s been working since, performing
+    services for several units, including felony waivers, municipal court and major crimes.
+    Joseph Baynes also found a home at the Defender Association of Philadelphia, where he’s worked as a records room clerk since July 2018. </p><br><br>
+
+    <p>“Its an incredibly important moment in justice reform in this country because the
+    successful reintegration of these individuals, should force us to rethink our whole kind of justice paradigm,” Levick said “I think these men and women are showing exactly how worthy they are of that option, and I hope that we can look at their experiences and learn from them.”</p><br><br>
+
+    <p>[INSERT SOMETHING ABOUT SHRINKING FOOTPRINT OF JUVENILE SYSTEM AND
+    CULTURE OF RETRIBUTION]</p><br><br>
+
+    <p>Yet, Pennsylvania’s lack of resentencing standards give rise to the ancillary issue of de facto
+    life sentences.</p><br><br>
+
+    <p>Of the former juvenile lifers resentenced to non-life terms, many were given new sentences
+    of 40 plus years, which can amount to life in prison, Levick explained.</p><br><br>
+
+    <p>Pennsylvania’s Supreme Court is currently deliberating the issue of what constitutes a life
+    sentence in Commonwealth v. Felder. The Defender Association of Philadelphia and Juvenile
+    Law Center jointly submitted an appeal on behalf of Michael Felder urging a revaluation of
+    the 50-year resentence imposed on Felder.</p><br><br>
+
+    <p>Despite Pennsylvania’s significant progress in juvenile justice, other states - like Louisiana
+    and Michigan - are lagging behind in resentencing, much to Bridge’s surprise.
+    “It’s an incredible abuse,” Bridge said. “It’s incumbent upon all participants in the criminal
+    justice system to try to rectify that.”</p><br><br>
 
 
 </div>
 </div>
+
+<!-- c3 script-->
+   <script type="text/javascript">
+   //CHART 1
+
+           var chart1 = c3.generate({
+             bindto: '#incarceration',
+             data: {
+               x: 'x',
+               columns: [
+                 ['x', 1950, 1960, 1970, 1980, 1990, 2000,2010],
+                ['Juvenile lifers', 1, 1, 83, 109, 194, 106, 27],
+               ]
+             },
+             color: {
+               pattern: ['#D9B269', '#ff00ff', '#ee6a4b', '#60c4b2', '#973895']
+             }
+           });
+
+           var chart2 = c3.generate({
+              bindto: '#age-released',
+               data: {
+                 x : 'x',
+                   columns: [
+                     ['x', 2016, 2017, 2018, 2019],
+                     ['30-39yrs', 1, 1, 2, 9],
+         ['40-49yrs', 0, 15, 39, 25],
+         ['50-59yrs', 5, 61, 13, 6],
+         ['60-69yrs', 1, 12, 7, 3]
+                   ],
+                   type: 'bar'
+               },
+
+
+               color: {
+                 pattern: ['#FFDA94', '#D9B168', '#27548C', '#689AD9', '#973895']
+               }
+           });
+
+</script>
+
+
 
 
 <!-- JavaScript calls -->
