--- a/story-template1.html
+++ b/story-template1.html
@@ -159,9 +159,10 @@ parole for crimes committed before the age of 18.</p><br><br>
 <div class="incarceration-graph"><br>
     <div class="graphic-container">
       <div class="chart-title"><b>Incarceration rates for juvenile lifers in Pennsylvania</b></div>
-      <div class="chart-description">The number of juveniles sentenced to life without parole spiked in the '90s, a consequence of the tough-on-crime rhetoric and fears of "superpredators."</div><br>
+      <div class="chart-description">The number of juveniles sentenced to life without parole spiked in the '90s, a consequence of tough-on-crime policies and growing fears of "superpredators."</div><br>
+      <div class="chart-author">By CAMILA VELLOSO</div><br>
     </div>
-    <div id="incarceration"></div>
+    <div id="incarceration"></div><br>
     <div class="chart-source">Source: Pennsylvania Department of Corrections</div><br>
   </div><br><br>  <!-- END first graphic container-->
 
@@ -189,10 +190,11 @@ Miller ruling in Pennsylvania and for legislators to change the state’s senten
 <div class="incarceration-graph"><br>
     <div class="graphic-container">
       <div class="chart-title"><b>Age of juvenile lifers at release</b></div>
-      <div class="chart-description">Older inmates made up the first wave of resentencings of juvenile lifers cases in Pennsylvania, as they had spent the longest time incarcerated.</div><br>
+      <div class="chart-description">Inmates in their 40s and 50s made up the largest wave of juvenile lifers released in Pennsylvania in the years following the 2016 Supreme Court ruling in <span style="font-style: italic;">Montgomery v. Louisiana</span>.</div><br>
+      <div class="chart-author">By CAMILA VELLOSO</div><br>
     </div>
-    <div id="age-released"></div>
-    <div class="chart-source">Source: Pennsylvania Department of Corrections</div><br><br>
+    <div id="age-released"></div><br>
+    <div class="chart-source">Source: Pennsylvania Department of Corrections</div><br>
   </div><br><br>  <!-- END second graphic container-->
 
 
